# countess-vampseq2

./: LICENSE  README.md  pyproject.toml
src/: countess_vampseq2.py
